1992-06-19  dickey@software.org

	* src/dedline.c:
	correction to link2bfr: table entry for "%D" was getting
	clobbered sometimes & I dumped core

1992-06-19  ste_cm@software.org

	* src/dedline.c: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-06-18  dickey@software.org

	* src/deddoit.c: ensure that we have a buffer allocated for 'cmd_sh'

1992-06-18  ste_cm@software.org

	* src/deddoit.c: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-06-18  dickey@software.org

	* src/ded.c: in 'rescan()' protect against reference to cNAME when we
	last had no-files.

1992-05-27  dickey@software.org

	* user/ded.man: make '<' command recognize "%D" and "%d"

1992-05-27  ste_cm@software.org

	* user/ded.man: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-05-27  dickey@software.org

	* src/dedline.c: make '<' command recognize "%D" and "%d" expansion

	* src/dedring.c:
	'ring_path()' does not need to write in a static-buffer

1992-05-13  dickey@software.org

	* src/deddoit.c: 'system()' may set errno w/o returning a -1 code.

1992-05-12  dickey@software.org

	* src/dedring.c:
	realized that I was not using 'sort_key' when I had a pair
	of directories (ebpm4/src, ebpm4+/src) which did not sort
	properly.  Redid the logic using 'pathcmp()' which to compare
	the path-strings directly.

	* src/ded.h: 'sort_key' is obsolete

1992-05-12  ste_cm@software.org

	* src/ded.h: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-05-12  dickey@software.org

	* src/Makefile: added .c.lint rule

1992-05-12  ste_cm@software.org

	* src/Makefile: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-04-10  dickey@software.org

	* src/dedsort.c: don't sort empty lists!

1992-04-10  ste_cm@software.org

	* src/dedsort.c: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-04-09  dickey@software.org

	* src/dedring.c:
	hacks to force inserted pathnames to be resolved in case
	they are symbolic links

	* src/ded.c: