@@ -1,3 +1,12 @@
+1992-07-02  dickey@software.org
+
+	* src/ded.c: corrected a place where we cannot reopen /dev/tty
+	(i.e., during rsh).
+
+1992-07-02  ste_cm@software.org
+
+	* src/ded.c: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support
+
 1992-06-19  dickey@software.org
 
 	* src/dedline.c:
